gh-5508 Fix GWT compile issue