@@ -18,6 +18,7 @@ package stroom.util.shared;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public interface HasId {
 
@@ -27,7 +28,7 @@ public interface HasId {
         if (NullSafe.hasItems(hasIds)) {
             return hasIds.stream()
                     .map(HasId::getId)
-                    .toList();
+                    .collect(Collectors.toList());
         } else {
             return Collections.emptyList();
         }
